@@ -10,18 +10,18 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>pro.fessional</groupId>
-    <artifactId>wings</artifactId>
+    <groupId>pro.fessional.wings</groupId>
+    <artifactId>ancient</artifactId>
     <version>${revision}.${changelist}</version>
     <packaging>pom</packaging>
 
-    <name>wings</name>
+    <name>wings-ancient</name>
     <description>万物生长靠日</description>
 
     <modules>
-        <module>wings-example</module>
-        <module>wings-project</module>
-        <module>wings-radiant</module>
+        <module>wings</module>
+        <module>example</module>
+        <module>radiant</module>
     </modules>
 
     <properties>
@@ -42,25 +42,25 @@
         <maven.install.skip>false</maven.install.skip>
         <spring-boot.repackage.skip>false</spring-boot.repackage.skip>
         <spring-boot.repackage.executable>false</spring-boot.repackage.executable>
-        <!-- common -->
-        <errorprone.version>2.13.1</errorprone.version> <!-- https://github.com/google/error-prone/releases -->
-        <mapstruct.version>1.4.2.Final</mapstruct.version> <!-- https://github.com/mapstruct/mapstruct/releases -->
+        <!-- common quality-->
+        <errorprone.version>2.14.0</errorprone.version> <!-- https://github.com/google/error-prone/releases -->
+        <annotations.version>23.0.0</annotations.version> <!-- https://github.com/JetBrains/java-annotations -->
+        <!-- common utils-->
+        <mapstruct.version>1.5.1.Final</mapstruct.version> <!-- https://github.com/mapstruct/mapstruct/releases -->
         <guava.version>31.1-jre</guava.version> <!-- https://github.com/google/guava/releases/ -->
         <commons-io.version>2.11.0</commons-io.version> <!-- https://commons.apache.org/proper/commons-io/ -->
-        <!-- silencer -->
-        <mirana.version>2.2.4-SNAPSHOT</mirana.version> <!-- https://github.com/trydofor/pro.fessional.mirana -->
-        <!-- faceless -->
+        <!-- wings project -->
+        <mirana.version>2.4.0-SNAPSHOT</mirana.version> <!-- https://github.com/trydofor/pro.fessional.mirana -->
         <meepo.version>1.4.1-SNAPSHOT</meepo.version> <!-- https://github.com/trydofor/pro.fessional.meepo -->
         <simpleflatmapper.version>8.2.3</simpleflatmapper.version> <!-- https://github.com/arnaudroger/SimpleFlatMapper/tags -->
         <shardingsphere.version>5.1.1</shardingsphere.version> <!-- https://github.com/apache/shardingsphere/releases -->
-        <!-- slardar -->
         <kaptcha.version>2.3.3</kaptcha.version> <!-- https://github.com/trydofor/kaptcha -->
         <springdoc.version>1.6.7</springdoc.version> <!-- https://github.com/springdoc/springdoc-openapi/releases -->
-        <fastjson.version>1.2.79</fastjson.version> <!-- https://github.com/alibaba/fastjson/releases -->
+        <fastjson2.version>2.0.5</fastjson2.version> <!-- https://github.com/alibaba/fastjson2/releases -->
+        <fastjson.version>1.2.83</fastjson.version> <!-- https://github.com/alibaba/fastjson/releases -->
         <kryo.version>5.3.0</kryo.version> <!-- https://github.com/EsotericSoftware/kryo/releases -->
         <transmittable.version>2.12.6</transmittable.version> <!-- https://github.com/alibaba/transmittable-thread-local/releases -->
         <bouncycastle.version>1.71</bouncycastle.version> <!-- https://bouncycastle.org/releasenotes.html -->
-        <!-- warlock -->
         <justauth.version>1.16.5</justauth.version> <!-- https://github.com/justauth/JustAuth/releases -->
         <!-- others -->
         <boot-admin.version>2.6.6</boot-admin.version> <!-- https://github.com/codecentric/spring-boot-admin/releases -->
@@ -77,6 +77,7 @@
             --add-opens=java.base/java.io=ALL-UNNAMED <!-- FastJson -->
             --add-opens=java.base/java.nio=ALL-UNNAMED <!-- Hazelcast -->
             --add-opens=java.base/java.lang=ALL-UNNAMED <!-- Hazelcast -->
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED <!-- FastJson2 -->
             --add-opens=java.base/java.util=ALL-UNNAMED <!-- Boot Collections$EmptySet -->
             --add-opens=java.base/sun.nio.ch=ALL-UNNAMED <!-- Hazelcast -->
             --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED <!-- Hazelcast -->
@@ -104,58 +105,58 @@
             </dependency>
             <!-- pro.fessional.wings -->
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-silencer</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>silencer</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-silencer-test</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>silencer-test</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-faceless</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>faceless</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-faceless-flywave</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>faceless-flywave</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-faceless-jooq</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>faceless-jooq</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-faceless-shard</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>faceless-shard</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-faceless-test</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>faceless-test</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-slardar</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>slardar</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-slardar-hazelcast</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>slardar-hazelcast</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-slardar-test</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>slardar-test</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
-                <groupId>pro.fessional</groupId>
-                <artifactId>wings-warlock</artifactId>
+                <groupId>pro.fessional.wings</groupId>
+                <artifactId>warlock</artifactId>
                 <version>${wings.version}</version>
             </dependency>
             <dependency>
@@ -232,6 +233,12 @@
                 <version>${kaptcha.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson2.version}</version>
+            </dependency>
+            <dependency>
+                <!-- wings内禁用，为间接引用的第三方定义安全的版本号 -->
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
@@ -284,6 +291,11 @@
                 <version>${sentry.version}</version>
             </dependency>
             <!-- dev -->
+            <dependency>
+                <groupId>org.jetbrains</groupId>
+                <artifactId>annotations</artifactId>
+                <version>${annotations.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.errorprone</groupId>
                 <artifactId>error_prone_annotations</artifactId>
@@ -376,6 +388,7 @@
                             <arg>--add-exports=java.base/java.io=ALL-UNNAMED</arg> <!-- FastJson -->
                             <arg>--add-exports=java.base/java.nio=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/java.lang=ALL-UNNAMED</arg> <!-- Hazelcast -->
+                            <arg>--add-exports=java.base/java.lang.invoke=ALL-UNNAMED</arg> <!-- FastJson2 -->
                             <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/sun.security.x509=ALL-UNNAMED</arg> <!-- Boot -->
